Fix manifest start_url for GitHub Pages

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Gestão de Flats",
   "short_name": "Flats",
   "description": "Sistema de Gerenciamento de Apartamentos e Reservas",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#3b82f6",
